# asvo

./: .gitignore  BFSInnerNode.cpp  BFSInnerNode.h  BFSOctree.cpp  BFSOctree.h  CMakeLists.txt  Camera.cpp  Camera.h  Glue.cpp  Glue.h  LICENSE.md  Light.cpp  Light.h  Object3D.cpp  Object3D.h  README.md  Renderer.cu  Renderer.h  Texture.cpp  VisualData.cpp  VoxelData.h  asvo_cuda.sln  asvo_cuda.vcxproj  extended_helper_math.h  float4x4.h  main.cpp  standard.make
content/: diffuse.raw  illum.raw  normal.raw  spec.raw
inc/: BFSInnerNode.h  BFSJob.cuh  BFSJob.h  BFSOctree.h  Camera.h  Glue.h  Light.h  Matrix.h  Object3D.h  Rasterizer.h  Renderer.h  Texture.h  VisualData.h  VoxelData.h  bfsinnernode.h  bfsjob.h  bfsleaf.h  bfsoctree.h  bfsoctree_operations.h  camera.h  camera_operations.h  expand_raster.h  extended_helper_math.h  glue.h  kernel_caller.h  light.h  math3d.h  matrix.h  object3d.h  object3d_operations.h  texture.h  texture_operations.h  util.h  vector2.h  vector3.h  vector4.h  visualdata.h  voxeldata.h
prototype/: asvo.sln
prototype/XNAnimation/: ChangeLog.txt  Documentation.txt  FAQ.txt  TODO.txt  XNAnimation.sln
prototype/XNAnimation/XNAnimation/: AnimationChannel.cs  AnimationChannelDictionary.cs  AnimationChannelKeyframe.cs  AnimationClip.cs  AnimationClipDictionary.cs  Pose.cs  ReadOnlyDictionary.cs  SkinnedModel.cs  SkinnedModelBone.cs  SkinnedModelBoneCollection.cs  SkinnedModelBoneDictionary.cs  SkinnedModelMesh.cs  SkinnedModelMeshCollection.cs  XNAnimation (Windows Phone).csproj  XNAnimation (Xbox 360).csproj  XNAnimation.csproj  XNAnimation.snk  XNAnimationPhone.snk  XNAnimationXbox.snk
prototype/asvo/: BFSOctree.cs  Camera.cs  DynamicOctree.cs  Game1.cs  JobCenter.cs  Math3DHelper.cs  Object3d.cs  Program.cs  Rasterizer.cs  SharedDepthBuffer.cs  TriangleMesh.cs  asvo.csproj
src/: BFSInnerNode.cpp  BFSJob.cpp  BFSOctree.cpp  BFSOctree.cu  Camera.cpp  Glue.cpp  Light.cpp  Object3D.cpp  Rasterizer.cu  Renderer.cu  Texture.cpp  VisualData.cpp  bfsoctree_operations.cpp  bfsoctree_operations.cu  camera_operations.cpp  expand_raster.cu  glue.cpp  kernel_caller.cpp  light.cpp  main.cpp  math3d.cpp  object3d_operations.cpp  texture_operations.cpp  util.cpp
(+50 files in other folders)
